tests/syntax-error/DataTypeSignature.vix
data Bool where
  False True : Bool

Bool : Type
